# XML-Measuring-Dynamics

./: .gitignore  LICENSE  README.md  pyproject.toml
XMLEvoDynam/: ML.py  MLInputTools.py  MLStart.py  System.py  __init__.py
XMLEvoDynam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
XMLEvoDynam/.ipynb_checkpoints/: MLStart-checkpoint.py  System-checkpoint.py  evodyn-checkpoint
scripts_final/01_prep/: run.py  run.sh
scripts_final/01_prep/.ipynb_checkpoints/: run-checkpoint.py
scripts_final/02_gen_inputset/: run.py  run.sh
scripts_final/02_gen_inputset/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  slurm.26449961-checkpoint.out
scripts_final/03_gen_MLset/: run.py  run.sh  trainidx.txt  trainval.txt
scripts_final/03_gen_MLset/.ipynb_checkpoints/: run-checkpoint.py
scripts_final/04_grid_search/: run.py
scripts_final/04_grid_search/.ipynb_checkpoints/: run-checkpoint.py
scripts_final/05_feature_importance/: run.py
scripts_final/05_feature_importance/.ipynb_checkpoints/: feature_importances-checkpoint.py  importances_depth_5_estimators_5-checkpoint.csv
