[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XMLEvoDynam"
version = "0.1.0"
description = "Short description of your project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Your Name", email = "your@email.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy",        # or other required packages
  "scipy",
  "matplotlib",
  "pandas",
  "MDAnalysis"
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[tool.setuptools]
packages = ["XMLEvoDynam"]

